--- a/site/.kobweb/conf.yaml
+++ b/site/.kobweb/conf.yaml
@@ -7,7 +7,7 @@ server:
     dev:
       contentRoot: "build/processedResources/js/main/public"
       script: "build/dist/js/developmentExecutable/spartanlabs.js"
-      api: "build/libs/site.jar"
+      api: "build/libs/spartanlabs.jar"
     prod:
       script: "build/dist/js/productionExecutable/spartanlabs.js"
       siteRoot: "../docs"
